--- a/index.html
+++ b/index.html
@@ -1,238 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://kit.fontawesome.com/402ab2e351.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <script src="https://kit.fontawesome.com/402ab2e351.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,300;0,400;0,500;0,700;1,100&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
-      integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
-      crossorigin="anonymous"
-    />
+        href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,300;0,400;0,500;0,700;1,100&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,400&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+        integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Daniel Boone</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <div class="row no-gutters">
-        <a class="logo col-md-4" href="index.html"></a>
-        <div class="col-md-8">
-          <div class="row bg-color-name-title no-gutters">
-            <div class="col heading">
-              <h1 class="name">Daniel C. Boone</h1>
-              <h2 class="title">Junior Full-Stack Developer</h2>
+        <div class="row no-gutters">
+            <a class="logo col-md-4" href="index.html"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title no-gutters">
+                    <div class="col heading">
+                        <h1 class="name">Daniel C. Boone</h1>
+                        <h2 class="title">Junior Full-Stack Developer</h2>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col">
+                        <ul id="nav" class="list-inline menu-container">
+                            <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menu-item">
+                                <a class="hvr-sweep-to-bottom" href="index.html"><i class="fa fa-home"
+                                        aria-hidden="true"></i><span>Home</span></a>
+                            </li>
+
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume list-inline-item menu-item">
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
+                                        aria-hidden="true"></i><span>Resume</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact list-inline-item menu-item">
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o"
+                                        aria-hidden="true"></i><span>Contact</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests list-inline-item menu-item">
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users"
+                                        aria-hidden="true"></i><span>Interests</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github list-inline-item menu-item">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github"
+                                        aria-hidden="true"></i><span>GitHub</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-download list-inline-item menu-item">
+                                <a href="assets/cv/Daniel_Boone.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row no-gutters">
-            <div class="col">
-              <ul id="nav" class="list-inline menu-container">
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="index.html"
-                    ><i class="fa fa-home" aria-hidden="true"></i
-                    ><span>Home</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="resume.html"
-                    ><i class="fa fa-graduation-cap" aria-hidden="true"></i
-                    ><span>Resume</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="contact.html"
-                    ><i class="fa fa-comment-o" aria-hidden="true"></i
-                    ><span>Contact</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="assets/cv/Daniel_Boone.pdf" target="_blank"
-                    ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Download</span></a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
-      </div>
     </header>
 
+
     <section class="container-fluid">
-      <div class="row">
-        <div class="col-md-4 bg-color-personal-info section-column">
-          <div class="row">
-            <div class="col-12">
-              <h3 class="section-heading uppercase">Personal info</h3>
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Personal info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Name:</p>
+                    </div>
+                    <div class="value">
+                        <p>Daniel C Boone</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Adress:</p>
+                    </div>
+                    <div class="value">
+                        <p>Schiedamse weg 12</p>
+                        <p>3928EP</p>
+                        <p>Schiedam</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Phone:</p>
+                    </div>
+                    <div class="value">
+                        <p>0031 649 39 49</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Email:</p>
+                    </div>
+                    <div class="value">
+                        <p>Test@testemail.email</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="personal-info-item">
-            <div class="key">
-              <p class="uppercase">Name:</p>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">About Me</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I'm a skilled Jr. Full-Stack Engineer with a wealth of
+                                    diverse life and technical experiences that I bring to every
+                                    project.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">
+                                    How do I do it?
+                                </h4>
+                                <p>
+                                    I follow form as well as function. I know that the
+                                    aesthetics of effective design combined with application
+                                    speed, security and reliability combine to create a great
+                                    user experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>
+                                    I work quickly and effectively in getting things done and
+                                    working across different stacks. I am an excellent
+                                    communicator who thrives in bright and enthusiastic teams,
+                                    but I am also a self-starter when working solo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="value">
-              <p>Daniel C Boone</p>
-            </div>
-          </div>
-          <div class="personal-info-item">
-            <div class="key">
-              <p class="uppercase">Adress:</p>
-            </div>
-            <div class="value">
-              <p>Schiedamse weg 12</p>
-              <p>3928EP</p>
-              <p>Schiedam</p>
-            </div>
-          </div>
-          <div class="personal-info-item">
-            <div class="key">
-              <p class="uppercase">Phone:</p>
-            </div>
-            <div class="value">
-              <p>0031 649 39 49</p>
-            </div>
-          </div>
-                    <div class="personal-info-item">
-            <div class="key">
-              <p class="uppercase">Email:</p>
-            </div>
-            <div class="value">
-              <p>Test@testemail.email</p>
-            </div>
-          </div>
         </div>
-        <div class="col-md-8 bg-color-three-reasons section-column">
-          <div class="row">
-            <div class="col">
-              <h3 class="section-heading uppercase">About Me</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-              <div class="row">
-                <div class="col-2">
-                  <i
-                    class="three-reasons-icon fa fa-question"
-                    aria-hidden="true"
-                  ></i>
-                </div>
-                <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">What do I do?</h4>
-                  <p>
-                    I'm a skilled Jr. Full-Stack Engineer with a wealth of
-                    diverse life and technical experiences that I bring to every
-                    project.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-              <div class="row">
-                <div class="col-2">
-                  <i
-                    class="three-reasons-icon fa fa-thumbs-up"
-                    aria-hidden="true"
-                  ></i>
-                </div>
-                <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">
-                    How do I do it?
-                  </h4>
-                  <p>
-                    I follow form as well as function. I know that the
-                    aesthetics of effective design combined with application
-                    speed, security and reliability combine to create a great
-                    user experience.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-              <div class="row">
-                <div class="col-2">
-                  <i
-                    class="three-reasons-icon fa fa-bolt"
-                    aria-hidden="true"
-                  ></i>
-                </div>
-                <div class="col-10">
-                  <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                  <p>
-                    I work quickly and effectively in getting things done and
-                    working across different stacks. I am an excellent
-                    communicator who thrives in bright and enthusiastic teams,
-                    but I am also a self-starter when working solo.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <footer class="container-fluid">
-      <div id="footer-details" class="row">
-        <div class="col-sm-4">
-          <h5 class="uppercase general-sub">About</h5>
-          <p class="inline-block">
-            Jr. Full-stack Developer with an extensive background in Software
-            Testing
-          </p>
+        <div id="footer-details" class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
+                    Jr. Full-stack Developer with an extensive background in Software
+                    Testing
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Download</h5>
+                <p class="inline-block">
+                    Need a printable version of my CV? Get it here!
+                    <a href="assets/cv/Daniel_Boone.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download"
+                            aria-hidden="true"></i></a>
+                    <span class="sr-only">Download link.</span>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Social</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://github.com/Dutchie1990"><i class="fa fa-github"></i><span
+                                class="sr-only">Github</span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.linkedin.com/in/daniel-boone-b8578579/"><i
+                                class="fa fa-linkedin"></i><span class="sr-only">LinkedIn</span></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="col-sm-4">
-          <h5 class="uppercase general-sub">Download</h5>
-          <p class="inline-block">
-            Need a printable version of my CV? Get it here!
-            <a href="assets/cv/Daniel_Boone.pdf" target="_blank" class="cv-pdf"
-              ><i class="fa fa-download" aria-hidden="true"></i
-            ></a>
-            <span class="sr-only">Download link.</span>
-          </p>
-        </div>
-        <div class="col-sm-4">
-          <h5 class="uppercase general-sub">Social</h5>
-          <ul class="list-inline social-links">
-            <li class="list-inline-item">
-              <a target="_blank" href="https://github.com/Dutchie1990"
-                ><i class="fa fa-github"></i
-                ><span class="sr-only">Github</span></a
-              >
-            </li>
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.linkedin.com/in/daniel-boone-b8578579/"
-                ><i class="fa fa-linkedin"></i
-                ><span class="sr-only">LinkedIn</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
     </footer>
-  </body>
+</body>
+
 </html>
