--- a/resume.html
+++ b/resume.html
@@ -30,55 +30,48 @@
 
   <body>
     <header>
-      <div class="row no-gutters">
-        <a class="logo col-md-4" href="index.html"></a>
-        <div class="col-md-8">
-          <div class="row bg-color-name-title no-gutters">
-            <div class="col heading">
-              <h1 class="name">Daniel C. Boone</h1>
-              <h2 class="title">Junior Full-Stack Developer</h2>
+        <div class="row no-gutters">
+            <a class="logo col-md-4" href="index.html"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title no-gutters">
+                    <div class="col heading">
+                        <h1 class="name">Daniel C. Boone</h1>
+                        <h2 class="title">Junior Full-Stack Developer</h2>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col">
+                        <ul id="nav" class="list-inline menu-container">
+                            <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menu-item">
+                                <a class="hvr-sweep-to-bottom" href="index.html"><i class="fa fa-home"
+                                        aria-hidden="true"></i><span>Home</span></a>
+                            </li>
+
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume list-inline-item menu-item">
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
+                                        aria-hidden="true"></i><span>Resume</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact list-inline-item menu-item">
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o"
+                                        aria-hidden="true"></i><span>Contact</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests list-inline-item menu-item">
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users"
+                                        aria-hidden="true"></i><span>Interests</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github list-inline-item menu-item">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github"
+                                        aria-hidden="true"></i><span>GitHub</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-download list-inline-item menu-item">
+                                <a href="assets/cv/Daniel_Boone.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row no-gutters">
-            <div class="col">
-              <ul id="nav" class="list-inline menu-container">
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="index.html">
-                    <i class="fa fa-home" aria-hidden="true"></i
-                    ><span>Home</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="resume.html"
-                    ><i class="fa fa-graduation-cap" aria-hidden="true"></i
-                    ><span>Resume</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="contact.html"
-                    ><i class="fa fa-comment-o" aria-hidden="true"></i
-                    ><span>Contact</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menu-item"
-                >
-                  <a class="hvr-sweep-to-bottom" href="assets/cv/Daniel_Boone.pdf" target="_blank"
-                    ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Download</span></a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
-      </div>
     </header>
 
     <section class="container-fluid">
